Some JVM optimizations